# bilingual_ticket_classifier

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
demo/: app.py
models/best_model/: eval_metrics.json  model.safetensors  queue_label_map.json  type_label_map.json
models/best_model/encoder/: config.json  model.safetensors
notebooks/: data-preprocessing.ipynb
src/bilingual_ticket_classifier/config/: wandb_config.py
src/bilingual_ticket_classifier/evaluation/: evaluate.py
src/bilingual_ticket_classifier/models/: multi_head_classifier.py
src/bilingual_ticket_classifier/processing/: data_processor.py
src/bilingual_ticket_classifier/save/: save_model.py
src/bilingual_ticket_classifier/training/: save_model.py  train.py  trainer.py
wandb/run-20250901_123805-r9p9erpj/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
