[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual_ticket_classifier"
version = "0.1.0"
description = "Multitask bilingual ticket classification using XLM-RoBERTa"
authors = [
    { name = "Ali Khalaji" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "scikit-learn",
    "pandas",
    "tqdm",
    "wandb",
    "accelerate",
    "python-dotenv"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
