[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual_ticket_classifier"
version = "0.1.0"
description = "Multitask bilingual ticket classification using XLM-RoBERTa"
authors = [
    { name = "Ali Khalaji" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["transformers", "multilingual", "classification", "customer-support", "xlm-roberta"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate",
    "datasets",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "torch==2.8.0+cu126",
    "tqdm",
    "transformers==4.55.4",
    "wandb==0.21.1"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
